[package]
name = "FunParProjectGithub"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
crossbeam = "0.8.3"
num_cpus = "1.13"
time = "0.2"
either = "1.6.1"
rand = "0.8"


[dev-dependencies]
criterion = "0.3" 

[lib]
name = "my_dijkstra_crate"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/main.rs"